# full-logger

./: .gitignore  README.md
docs/: changelog.md
full_logger/: Cargo.toml  README.md
full_logger/examples/: example.rs
full_logger/src/: file_manager.rs  lib.rs  log.rs  logger.rs  thread.rs
