[package]
name = "full_logger"
version = "0.1.3"
edition = "2021"
description = "Easy to use Log library"
license = "MIT"
readme = "README.md"
keywords = ["ini", "csv", "toml", "log", "logger"]
repository = "https://github.com/eVisualUser/full-logger"

[dependencies]
chrono = "0.4.23" # DateTime
pretty_ini = "0.1.8" # File Format
toml_edit = "0.19.3" # File Format
fltk = "1.4.8"
curl = "0.4.47"
